Fix wrong text align

--- a/frontend/sass/default/blocks/budget-info.scss
+++ b/frontend/sass/default/blocks/budget-info.scss
@@ -14,6 +14,10 @@
 
     @include media ('<mobile-large') {
       width: 100%;
+
+      &:last-child {
+        text-align: left;
+      }
     }
   }
 
